--- a/00857115-EX7-2.html
+++ b/00857115-EX7-2.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+    <a href="https://28921085.github.io/download/00857115-EX7-2.html" target="_blank">GitHub Link</a>
     <form action="#">
         <p>
             <label>Book Title:
